syntax = "proto3";

// 1. this package name is used as the package name in the generated go code
// 2. it prevents name collisions with other packages
package log.v1;

// this option is used to generate the go code in the api/log_v1 package
option go_package = "github.com/ttaatoo/proglog/api/log_v1";

message Record {
    bytes value = 1;
    uint64 offset = 2;
}


service Log {
    rpc Produce(ProduceRequest) returns (ProduceResponse) {}
    rpc Consume(ConsumeRequest) returns (ConsumeResponse) {}
    rpc ProduceStream(stream ProduceRequest) returns (stream ProduceResponse) {}
    rpc ConsumeStream(ConsumeRequest) returns (stream ConsumeResponse) {}
}

message ProduceRequest {
    Record record = 1;
}

message ProduceResponse {
    uint64 offset = 1;
}

message ConsumeRequest {
    uint64 offset = 1;
}

message ConsumeResponse {
    Record record = 2;
}
